symbol viewer: fix perl parsing comments

problem was:
my $foo
  = 'bar';

Thanks to John Schroeder for the patch!

FIXED-IN: 4.11.1
BUG: 323525